<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_and_register.login.LoginFragment"
    >

  <LinearLayout
      android:id="@+id/top_frame"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@drawable/double_color_background"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@id/bottom_frame"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/login_button"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="430dp"
      android:background="@drawable/round_kona_view"
      android:elevation="8dp"
      android:gravity="center"
      android:text="LOGIN"
      android:textColor="@color/white"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <LinearLayout
      android:id="@+id/bottom_frame"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/top_frame"
      />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/login_frame"
      android:layout_width="350dp"
      android:layout_height="300dp"
      android:layout_marginTop="130dp"
      android:background="@drawable/round_corner"
      android:elevation="7dp"
      android:orientation="horizontal"
      android:padding="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#6A6868"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phone_number_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:textStyle="bold"
        android:text="@string/phone_number"
        android:textColor="#044fab"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textView"
        />

    <EditText
        android:id="@+id/login_phone_number_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="true"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_text"
        />

    <TextView
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/password"
        android:textColor="#044fab"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_phone_number_editText"
        />

    <EditText
        android:id="@+id/login_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Enter Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/register_and_forgot_password_container"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="30dp"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      >


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:background="#044fab"
        android:elevation="5dp"
        android:gravity="center"
        android:text="Forgot Password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/register_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/register_textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:background="#044fab"
        android:elevation="5dp"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/forgot_password"
        app:layout_constraintTop_toTopOf="parent"

        />

  </androidx.constraintlayout.widget.ConstraintLayout>


  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/login_image_container"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:padding="16dp"
      app:layout_constraintBottom_toTopOf="@id/login_frame"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >

    <ImageView
        android:id="@+id/login_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    android:src="@drawable/ic_car"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>